# os

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  boot_sect_main.asm  boot_sect_print.asm  dump.sh  expect.map  filesystem.md  kernel.elf  link.ld  makefile  memory.md  notes.md  run.sh
boot/: boot.asm  (+10 more)
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/bar/: CMakeLists.txt
src/apps/bar/src/: bar.c  interrupt.asm
src/apps/demo/: CMakeLists.txt
src/apps/demo/src/: demo.c
src/apps/foo/: CMakeLists.txt
src/apps/foo/src/: foo.c
src/apps/libc/: CMakeLists.txt
src/apps/libc/include/: sysint.h
src/apps/libc/include/libc/: sys_call.h
src/apps/libc/src/: interrupt.asm  sys_call.c
src/apps/shell/: CMakeLists.txt  link.ld
src/apps/shell/include/: commands.h  parser.h  shell.h
src/apps/shell/src/: commands.c  parser.c  shell.c
src/boot/: CMakeLists.txt
src/boot/src/: boot.asm  second.asm  third.asm
src/boot/src/lib/: disk.asm  gdt.asm  memory.asm  print.asm
src/cpu/: CMakeLists.txt  isr.h  ports.c  timer.c
src/cpu/i386/: CMakeLists.txt
src/cpu/i386/include/cpu/: boot_params.h
src/cpu/i386/src/: boot_params.c  cpu.asm  gdt.c  interrupt.asm  isr.c  mmu.c  paging.asm  ram.c  timer.c  tss.c
src/cpu/include/cpu/: gdt.h  isr.h  mmu.h  ram.h  tss.h
src/cpu/src/: idt.c  interrupt.asm  isr.c  ports.asm  tss.c
src/drivers/: CMakeLists.txt  vga.c
src/drivers/include/_driver/: fs.h  fs_file.h
src/drivers/include/drivers/: ata.h  disk.h  fs_driver.h  io_driver.h  keyboard.h  ramdisk.h  rtc.h  tar.h  timer.h  vga.h
src/drivers/src/: CMakeLists.txt  ata.c  disk.c  fs_driver.c  io_driver.c  keyboard.c  ramdisk.c  rtc.c  tar.c  timer.c  vga.c
src/drivers/src/ata/: CMakeLists.txt
src/drivers/src/ata/src/: ata.c  support.c
src/drivers/src/fs_tar/: CMakeLists.txt
src/drivers/src/fs_tar/src/: support.c  tar.c  tar_dir.c  tar_file.c
src/drivers/src/legacy/: CMakeLists.txt
src/drivers/src/legacy/src/: _ata.c  _tar.c  disk.c  keyboard.c  tar.c  vga.c
src/drivers/src/lib/: CMakeLists.txt
src/drivers/src/lib/include/: driver.h
src/drivers/src/lib/src/: driver.c
src/drivers/src/ramdisk/: CMakeLists.txt
src/drivers/src/ramdisk/src/: ramdisk.c
src/ebus/: CMakeLists.txt
src/ebus/include/: ebus.h
src/ebus/src/: ebus.c
src/io/: CMakeLists.txt
src/io/include/io/: file.h
src/io/src/: file.c
src/kernel/: CMakeLists.txt  kernel.c  link.ld
src/kernel/include/: debug.h  defs.h  disk.h  exec.h  idle.h  interrupts.h  kernel.h  kmem.h  memory.h  paging.h  proc.h  process.h  process_manager.h  ram.h  term.h  test_lib.h
src/kernel/include/cpu/: boot_params.h  gdt.h  idt.h  isr.h  mmu.h  ports.h  ram.h  timer.h  tss.h
src/kernel/include/drivers/: ata.h  keyboard.h  ramdisk.h  rtc.h  tar.h  vga.h
src/kernel/include/kernel/: boot_params.h  system_call.h  system_call_io.h  system_call_mem.h  system_call_proc.h  system_call_stdio.h
src/kernel/include/libc/: dir.h  file.h  mem.h  memory.h  stdio.h  string.h
src/kernel/include/libc/intern/: page.h
src/kernel/src/: boot_params.c  commands.c  disk.c  exec.c  idle.c  interrupts.c  kernel.c  kernel_entry.asm  memory.c  paging.c  proc.c  process.c  process_manager.c  ram.c  system_call.c  system_call_io.c  system_call_mem.c  system_call_proc.c  system_call_stdio.c  term.c  test.c
src/kernel/src/cpu/: cpu.asm  gdt.c  idt.c  interrupt.asm  isr.c  mmu.c  ports.c  ram.c  timer.c
src/kernel/src/drivers/: ata.c  keyboard.c  ram.c  rtc.c  tar.c  vga.c
src/kernel/src/libc/: circbuff.c  dir.c  file.c  memory.c  stdio.c  string.c
src/libc/: CMakeLists.txt
src/libc/include/libc/: circbuff.h  dir.h  file.h  memory.h  proc.h  process.h  signal.h  stdio.h  string.h
src/libc/include/libc/datastruct/: array.h  circular_buffer.h
src/libc/intern/: block.c  block.h  page.c
src/libc/src/: array.c  circbuff.c  circular_buffer.c  dir.c  file.c  memory.c  proc.c  process.c  signal.c  stdio.c  string.c
src/libk/: CMakeLists.txt
src/libk/include/libk/: defs.h  sys_call.h
src/libk/src/: calls.asm  interrupt.asm  sys_call.c
src/memory_alloc/: CMakeLists.txt
src/memory_alloc/include/: memory_alloc.h
src/memory_alloc/src/: memory_alloc.c
src/process/: CMakeLists.txt
src/process/include/: process.h  process_manager.h
src/process/src/: process.c  process_manager.c
src/system_call/: CMakeLists.txt
src/system_call/include/: system_call.h
src/system_call/include/kernel/: system_call_io.h  system_call_io_dir.h  system_call_io_file.h  system_call_mem.h  system_call_proc.h  system_call_stdio.h
src/system_call/src/: system_call.c  system_call_io_dir.c  system_call_io_file.c  system_call_mem.c  system_call_proc.c
src/util/: CMakeLists.txt
src/util/include/: addr.h  defs.h
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile
tests/cmake/: CodeCoverage.cmake
tests/include/: test_header.h  test_lib.h
tests/libc/: test1.c  test_circbuff.c  test_circbuff.cpp
tests/mock/: sys_call.c.c
tests/mock/libk/: sys_call.h
tests/src/: CMakeLists.txt  first_test.c  test.h
tests/src/cpu/: CMakeLists.txt  test_gdt.cpp  test_mmu.cpp
tests/src/drivers/: CMakeLists.txt  test_ata.cpp  test_ramdisk.cpp  test_vga.cpp
tests/src/kernel/: CMakeLists.txt  test_paging.cpp  test_process.cpp  test_ram.cpp
tests/src/libc/: CMakeLists.txt  test_array.cpp  test_circbuff.cpp  test_circular_buffer.cpp  test_memory.cpp  test_process.cpp  test_signal.cpp  test_string.cpp
tests/src/libk/: CMakeLists.txt  test_libk.cpp
tests/src/memory_alloc/: CMakeLists.txt  test_memory_alloc.cpp
tests/src/mocks/: CMakeLists.txt
tests/src/mocks/include/: ebus.mock.h  memory_alloc.mock.h  paging.mock.h  process.mock.h  ram.mock.h  test_common.h
tests/src/mocks/include/cpu/: mmu.mock.h  ports.mock.h  tss.mock.h
tests/src/mocks/include/libc/: memory.mock.h  proc.mock.h  string.mock.h
tests/src/mocks/src/: cpu.mock.c  datastruct.mock.c  ebus.mock.c  libc.mock.c  libk.mock.c  memory_alloc.c  paging.mock.c  process.mock.c  ram.mock.c  test_common.c
tests/src/process/: CMakeLists.txt
(+138 files in other folders)
